SFUSA/force-app/main/default/objects/Contact/fields/AccountType__c.field-meta.xml
<CustomField>
        <fullName>AccountType__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </CustomField>