SFUSA/force-app/main/default/objects/Contact/fields/AdditionalAccounts__c.field-meta.xml
<CustomField>
        <fullName>AdditionalAccounts__c</fullName>
        <inlineHelpText>Please use this field to identify any other Accounts this Contact is associated to. Include Store ID, Store Name and any other relevant attributes used to identify the Account.</inlineHelpText>
        <label>Additional Accounts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>