SFUSA/force-app/main/default/objects/Contact/fields/BirthdayNoYear__c.field-meta.xml
<CustomField>
        <fullName>BirthdayNoYear__c</fullName>
        <formula>IF(text(BirthDay__c) == null || text(BirthMonth__c) == null, null, text(BirthMonth__c) &amp; "/" &amp; text(BirthDay__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month / Day.</inlineHelpText>
        <label>Birthday</label>
        <type>Text</type>
    </CustomField>