SFUSA/force-app/main/default/objects/Contact/fields/Children__c.field-meta.xml
<CustomField>
        <fullName>Children__c</fullName>
        <inlineHelpText>Names, age, interests, etc.</inlineHelpText>
        <label>Children</label>
        <type>TextArea</type>
    </CustomField>