SFUSA/force-app/main/default/objects/Contact/fields/CollegeAffiliation__c.field-meta.xml
<CustomField>
        <fullName>CollegeAffiliation__c</fullName>
        <label>College / Affiliation</label>
        <type>TextArea</type>
    </CustomField>