SFUSA/force-app/main/default/objects/Contact/fields/Contractor__c.field-meta.xml
<CustomField>
        <fullName>Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to verify if a self-registering user is a contractor</description>
        <label>Contractor</label>
        <type>Checkbox</type>
    </CustomField>