SFUSA/force-app/main/default/objects/Contact/fields/Customer__c.field-meta.xml
<CustomField>
        <fullName>Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to verify if a self-registering user is a customer</description>
        <label>Customer</label>
        <type>Checkbox</type>
    </CustomField>