SFUSA/force-app/main/default/objects/Contact/fields/Employee__c.field-meta.xml
<CustomField>
        <fullName>Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to verify if a self-registering user is a employee</description>
        <label>Employee</label>
        <type>Checkbox</type>
    </CustomField>