SFUSA/force-app/main/default/objects/Contact/fields/FacebookURL__c.field-meta.xml
<CustomField>
        <fullName>FacebookURL__c</fullName>
        <label>Facebook URL</label>
        <type>Url</type>
    </CustomField>