SFUSA/force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is contact inactive?</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </CustomField>