SFUSA/force-app/main/default/objects/Contact/fields/MilitaryService__c.field-meta.xml
<CustomField>
        <fullName>MilitaryService__c</fullName>
        <label>Military Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>