SFUSA/force-app/main/default/objects/Contact/fields/PrimaryRole__c.field-meta.xml
<CustomField>
        <fullName>PrimaryRole__c</fullName>
        <label>Primary Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bartender</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Chef</fullName>
                </value>
                <value>
                    <fullName>Clerk</fullName>
                </value>
                <value>
                    <fullName>Host/Hostess</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Media / Trade Member</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Servers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>