SFUSA/force-app/main/default/objects/Contact/fields/SpousesInterests__c.field-meta.xml
<CustomField>
        <fullName>SpousesInterests__c</fullName>
        <label>Spouses Interests</label>
        <type>TextArea</type>
    </CustomField>