SFUSA/force-app/main/default/objects/Contact/fields/TIN_VAT_Number__c.field-meta.xml
<CustomField>
        <fullName>TIN_VAT_Number__c</fullName>
        <label>TIN/VAT Number</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>