SFUSA/force-app/main/default/objects/Contact/fields/WorkAnniversary__c.field-meta.xml
<CustomField>
        <fullName>WorkAnniversary__c</fullName>
        <label>Work Anniversary</label>
        <type>Date</type>
    </CustomField>