SFUSA/force-app/main/default/objects/Contact/fields/WorkHistory__c.field-meta.xml
<CustomField>
        <fullName>WorkHistory__c</fullName>
        <label>Work History</label>
        <type>TextArea</type>
    </CustomField>